<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="inAppReviewRateLater">Not now</string>
  <string name="inAppReviewRateNow">Leave a review</string>
  <string name="inAppReviewMessage">Next, take a moment and rate your experience with the app.</string>
  <string name="inAppReviewTitle">How are your enjoying Podplay?</string>
  <string name="sad_face">sad face</string>
  <string name="progress_bar">progress bar</string>
  <string name="happy_face">happy face</string>
</resources>