<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/inAppReviewPromptRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="0dp">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/largeMargin">

      <ImageView
          android:id="@+id/sadFace"
          android:layout_width="@dimen/ratePromptFaceSize"
          android:layout_height="@dimen/ratePromptFaceSize"
          android:layout_marginStart="@dimen/largeMargin"
          android:contentDescription="@string/sad_face"
          android:src="@drawable/sad_face" />

      <ImageView
          android:id="@+id/progressBar"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/smallMargin"
          android:layout_marginStart="@dimen/promptProgressMargin"
          android:layout_marginEnd="@dimen/promptProgressMargin"
          android:layout_weight="1"
          android:contentDescription="@string/progress_bar"
          app:srcCompat="@drawable/progress_black" />

      <ImageView
          android:id="@+id/happyFace"
          android:layout_width="@dimen/ratePromptFaceSize"
          android:layout_height="@dimen/ratePromptFaceSize"
          android:layout_marginEnd="@dimen/largeMargin"
          android:contentDescription="@string/happy_face"
          android:src="@drawable/happy_face" />

    </LinearLayout>

    <TextView
        android:id="@+id/reviewPromptTitle"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMargin"
        android:gravity="center_horizontal"
        android:text="@string/inAppReviewTitle"
        android:textColor="@color/charcoal_black"
        android:textSize="@dimen/ratePromptTitleTextSize" />

    <TextView
        android:id="@+id/reviewPromptText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:gravity="center"
        android:text="@string/inAppReviewMessage"
        android:textSize="@dimen/ratePromptMessageTextSize" />

    <TextView
        android:id="@+id/leaveReview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonSize"
        android:layout_marginHorizontal="@dimen/defaultMargin"
        android:layout_marginTop="@dimen/largeMargin"
        android:background="@color/dark_sea_green"
        android:gravity="center"
        android:text="@string/inAppReviewRateNow"
        android:textColor="@color/white"
        android:textSize="@dimen/promptButtonTextSize" />

    <TextView
        android:id="@+id/reviewLater"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonSize"
        android:layout_marginHorizontal="@dimen/defaultMargin"
        android:layout_marginTop="@dimen/buttonMarginTop"
        android:layout_marginBottom="@dimen/defaultMargin"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/inAppReviewRateLater"
        android:textSize="@dimen/promptButtonTextSize" />
  </LinearLayout>
</androidx.cardview.widget.CardView>
